<resources>
    <string name="app_name">AudioAtlas</string>
    <string name="feeds">Feeds</string>
    <string name="friends">Friends</string>
    <string name="about">About</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="settings">settings</string>
    <string name="rewind">rewind</string>
    <string name="next">next</string>
    <string name="mute">mute</string>
    <string name="max">max</string>
    <string name="more">more</string>
    <string name="content_description_more">more</string>
    <string name="my_records">my records</string>
    <string name="bytes">bytes</string>
</resources>